@@ -13,7 +13,6 @@ import io.github.vzwingma.finances.budget.services.communs.data.model.CompteBanc
 import io.github.vzwingma.finances.budget.services.communs.utils.exceptions.CompteClosedException;
 import io.github.vzwingma.finances.budget.services.communs.utils.exceptions.DataNotFoundException;
 import io.quarkus.test.junit.QuarkusTest;
-import io.smallrye.mutiny.Multi;
 import io.smallrye.mutiny.Uni;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
@@ -21,7 +20,6 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import java.time.Month;
-import java.util.List;
 import java.util.concurrent.CompletionException;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -68,26 +66,7 @@ class BudgetServiceTest {
 
 
 
-    /**
-     * Test d'un chargement des budgets d'un compte
-     */
-    @Test
-    void testGetBudgetsOfCompte() {
 
-        // Initialisation
-        Mockito.when(mockCompteServiceProvider.getCompteById(anyString()))
-                .thenReturn(Uni.createFrom().item(MockDataBudgets.getCompteC1()));
-
-        Mockito.when(mockOperationDataProvider.chargeBudgetsMensuels(anyString()))
-                .thenReturn(Multi.createFrom().items(
-                        MockDataBudgets.getBudgetInactifCompteC1(),
-                        MockDataBudgets.getBudgetActifCompteC1et1operationPrevue(),
-                        MockDataBudgets.getBudgetActifCompteC2et0operationPrevue()));
-
-        // Test
-        List<BudgetMensuel> budgets = budgetAppProvider.getBudgetsMensuels("C1").collect().asList().await().indefinitely();
-        assertEquals(3, budgets.size());
-    }
 
 
     /**
@@ -304,7 +283,7 @@ class BudgetServiceTest {
         BudgetMensuel budgetDesactive = budgetAppProvider.setBudgetActif(budgetADesactiver.getId(), false).await().indefinitely();
 
         assertFalse(budgetDesactive.isActif());
-        assertEquals(OperationEtatEnum.REPORTEE, budgetDesactive.getListeOperations().get(0).getEtat());
+        assertEquals(OperationEtatEnum.REPORTEE, budgetDesactive.getListeOperations().getFirst().getEtat());
 
         Mockito.verify(mockOperationDataProvider, Mockito.times(1)).sauvegardeBudgetMensuel(budgetDesactive);
     }
